--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +7,6 @@
 body {
   margin: 2rem;
   font-family: "Roboto", sans-serif;
-
   display: grid;
   grid-template-columns: 15% 1fr;
 }
@@ -21,11 +20,19 @@ ol {
   list-style: none;
 }
 
-/* PRODUCT LIST */
-.productList {
-  display: grid;
-  grid-template-columns: 15% 1fr;
+/* CATEGORIES */
+.brands h2 {
+  font-size: 2rem;
 }
+.brands h2,
+.brands li {
+  padding: 1rem 0rem;
+}
+li:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+/* PRODUCT LIST */
 
 .productList main {
   grid-column: 2/3;
@@ -66,6 +73,23 @@ ol {
 .productImage:hover .textOverlay {
   opacity: 1;
 }
+.price.discount {
+  text-decoration: line-through;
+}
+.discountPrice {
+  display: flex;
+  justify-content: space-between;
+  color: rgb(228, 0, 0);
+}
+.soldOut {
+  text-align: center;
+  position: absolute;
+  right: 0rem;
+  bottom: 4rem;
+  background-color: #e0e0e0da;
+  padding: 0.5rem;
+  font-weight: bold;
+}
 
 /* PRODUCT PAGE */
 
@@ -87,8 +111,8 @@ ol {
 }
 dt {
   font-weight: bold;
-  padding-top: 0.7rem;
-  padding-bottom: 0.1rem;
+  padding-top: 1rem;
+  padding-bottom: 0.3rem;
 }
 form {
   display: flex;
