--- a/css/style.css
+++ b/css/style.css
@@ -73,16 +73,25 @@ li:hover {
 .productImage:hover .textOverlay {
   opacity: 1;
 }
-.price.discount {
-  text-decoration: line-through;
+.productList article .price .discount,
+.productList article .discountPrice {
+  display: none;
 }
-.discountPrice {
+.productList article.onSale .discountPrice {
   display: flex;
   justify-content: space-between;
   color: rgb(228, 0, 0);
 }
-.soldOut {
-  text-align: center;
+.productList article.onSale p.discount {
+  text-decoration: line-through;
+}
+.productList article .soldOutBox {
+  display: none;
+}
+.productList article.soldOut .soldOutBox {
+  display: initial;
+}
+.soldOutBox {
   position: absolute;
   right: 0rem;
   bottom: 4rem;
