--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 body {
-  margin: 2rem;
+  padding: 1rem;
   font-family: "Roboto", sans-serif;
   display: grid;
-  grid-template-columns: 15% 1fr;
+  grid-template-columns: 20% 1fr;
 }
 
 a {
@@ -27,13 +28,16 @@ ol {
 }
 .categoryPage h1,
 .categoryPage section {
-  padding-top: 1rem;
+  padding-top: 1.5rem;
+  padding-left: 1rem;
 }
-.categoryPage section.categories a li {
-  font-weight: bold;
+
+a.categoryName {
+  font-weight: 700;
+  text-transform: uppercase;
 }
-li:hover {
-  text-decoration: underline;
+a.categoryName:hover {
+  color: rgba(0, 0, 0, 0.377);
   cursor: pointer;
 }
 /* PRODUCT LIST */
@@ -47,6 +51,8 @@ li:hover {
 }
 .productList main h1 {
   grid-column: 1/-1;
+  padding-top: 2rem;
+  text-transform: uppercase;
 }
 .productImage {
   position: relative;
@@ -111,7 +117,6 @@ article.soldOut::before {
   bottom: 4rem;
   background-color: #e0e0e0da;
   padding: 0.5rem;
-  font-weight: bold;
   z-index: 100;
 }
 
@@ -137,7 +142,6 @@ article.soldOut::before {
   padding-top: 2rem;
 }
 dt {
-  font-weight: bold;
   padding-top: 1rem;
   padding-bottom: 0.3rem;
 }
@@ -145,9 +149,7 @@ form {
   display: flex;
   gap: 1rem;
 }
-form h4 {
-  font-weight: bold;
-}
+
 select {
   width: 50px;
   cursor: pointer;
